--- a/iCare/app/src/main/res/layout/dialog_choose_listview.xml
+++ b/iCare/app/src/main/res/layout/dialog_choose_listview.xml
@@ -16,14 +16,14 @@
 
         <TextView
             android:id="@+id/tv_dialog_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:paddingRight="40dp"
-            android:text="@string/choose_province"
+            android:text="@string/choose"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:layout_toLeftOf="@+id/btn_close" />
 
         <ImageButton
             android:id="@+id/btn_close"
@@ -40,9 +40,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         android:background="@color/common_bg"
-        android:orientation="vertical"
-        android:layout_marginBottom="40dp">
+        android:orientation="vertical">
 
         <ListView
             android:id="@+id/listView"
