--- a/iCare/app/src/main/res/layout/fragment_add_family.xml
+++ b/iCare/app/src/main/res/layout/fragment_add_family.xml
@@ -166,6 +166,38 @@
                 android:layout_marginRight="13dp"
                 android:background="@color/line_gray" />
 
+            <RelativeLayout
+                android:id="@+id/rel_Invite_Record"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="13dp">
+
+                <ImageView
+                    android:id="@+id/img3"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:background="@color/accent_material_light" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/img3"
+                    android:text="邀请记录"
+                    android:textColor="@color/black_deep"
+                    android:textSize="15sp" />
+
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="13dp"
+                android:background="@color/line_gray" />
+
         </LinearLayout>
     </LinearLayout>
 
